# stockpush

./: .gitignore  README.md  pyproject.toml  run-termux.sh  run.sh  sysinit-termux.sh  sysinit.sh
.claude/: settings.local.json
deploy/termux/: stockpush-daemon.sh
docs/: L0.md  L0规范.md  L1规范.md  Termux部署指南.md
docs/L1/: B41_B1B_出场信号_L1.md  DATABASE_TABLES_L1.md  F3.1_实时监控与调度_L1.md  F4.1_信号引擎_L1.md  F5.1.20_系统初始化_L1.md  F5.1_飞书推送_L1.md  F5.2_数据取数_L1.md  MM2_I5_信号策略_L1.md  XTICK_REALTIME_DATA_L1.md
docs/testplan/: F51_全面测试计划.md
docs/数据源管理/: 数据源能力对比.md
stockpush/: __init__.py  config.local.yaml  config.yaml  config_manager.py  console.py  credential_store.py  db_connector.py  log_manager.py  pg_connector.py  requirements.txt  worker.py
stockpush/data_down/: __init__.py  data_down.py  full_download_meta.py
stockpush/pool_mgr/: __init__.py  pool_mgr.py
stockpush/services/: __init__.py  calendar_checker.py  credential_utils.py  data_fetcher.py  data_source_registry.py  download_logger.py  feishu_pusher.py  format_utils.py  function_engine.py  function_registry.py  headless_runner.py  hermes_api.py  pool_watcher.py  push_manager.py  scheduler.py  signal_engine.py  signal_store.py  src_mgr.py  sys_init.py  telegram_pusher.py
stockpush/sql/: 001_signal_functions.sql  002_add_push_enabled.sql
stockpush/src_mgr/: __init__.py  byapi_provider.py  data_mapper.py  data_source_registry.py  sina_provider.py  src_comparator.py  src_mgr.py  src_provider.py  src_validator.py  standard_api_adapter.py  tdx_local_provider.py  tdx_online_provider.py  testdata.py  (+1 more)
(+17 files in other folders)
